--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Whanderley Souza Freitas <whanderley.souza@iff.edu.br>"]
 python = "^3.8"
 selenium = "^4.5.0"
 splinter = "^0.18.1"
+pylint = "^2.15.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
