--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ pylint = "^2.15.5"
 pre-commit = "^2.20.0"
 flake8 = "^5.0.4"
 black = "^22.10.0"
+PyYAML = "^6.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
