--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ pre-commit = "^2.20.0"
 flake8 = "^5.0.4"
 black = "^22.10.0"
 PyYAML = "^6.0"
+mypy = "^0.982"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
