--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ black = "^22.10.0"
 PyYAML = "^6.0"
 mypy = "^0.982"
 pytest-cov = "^4.0.0"
+Jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
