--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ Jinja2 = "^3.1.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+ipdb = "^0.13.9"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
