--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ PyYAML = "^6.0"
 mypy = "^0.982"
 pytest-cov = "^4.0.0"
 Jinja2 = "^3.1.2"
+pyaml = "^21.10.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
