--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.8"
 PyYAML = "^6.0"
 Jinja2 = "^3.1.2"
 pyaml = "^21.10.1"
+ruamel-yaml = "^0.17.21"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^4.0.0"
