--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "behave-django-autodoc"
-version = "0.1.1"
+version = "0.1.0"
 description = ""
 authors = ["Whanderley Souza Freitas <whanderley.souza@iff.edu.br>"]
 
@@ -9,7 +9,7 @@ python = "^3.8"
 PyYAML = "^6.0"
 Jinja2 = "^3.1.2"
 pyaml = "^21.10.1"
-ruamel-yaml = "^0.17.21"
+yamlordereddictloader = "^0.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^4.0.0"
@@ -20,6 +20,9 @@ pre-commit = "^2.20.0"
 black = "^22.10.0"
 pytest = "^5.2"
 ipdb = "^0.13.9"
+
+[tool.poetry.group.dev.dependencies]
+pytest-watch = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
